Fixes #604 suggestion box aligned properly at all sizes
Minor change

Adjusting sug box slightly

solving build errors

Solving more build errors

--- a/src/app/auto-complete/auto-complete.component.css
+++ b/src/app/auto-complete/auto-complete.component.css
@@ -13,50 +13,23 @@ a {
 }
 
 .suggestion-box{
-  width: 635.2px;
+  width: 634px;
   max-width: 100%;
   border: 1px solid rgba(150,150,150,0.3);
   background-color: white;
   margin-left: -25.7px;
   position: absolute;
-  box-shadow: 0px 0.2px 0px;
 }
-
-@media screen and (max-width: 961px) {
+@media screen and (max-width: 823px) and (min-width: 768px){
   .suggestion-box {
-    margin-left: -10.6px;
+    margin-left: -4.9%;
   }
 }
 
-@media screen and (max-width: 764px) {
+@media screen and (max-width: 767px) {
   .suggestion-box {
-    margin-left: -15.7%;
-    width: 652px;
-  }
-}
-
-@media screen and (max-width: 712px) {
-  .suggestion-box {
-    margin-left: -15.7%;
-    width: 609.8px;
-  }
-}
-
-@media screen and (max-width: 645px) {
-  .suggestion-box {
-    width: 557px;
-  }
-}
-
-@media screen and (max-width: 598px) {
-  .suggestion-box {
-    width: 519px;
-  }
-}
-
-@media screen and (max-width: 548px) {
-  .suggestion-box {
-    width: 479px;
+    margin-left: -18%;
+    width: 95.2vw;
   }
 }
 
